Unreleased Version 2.2.2-pre
 * Fix: Use more accurate timers for performance profiles if the platform supports it.
 * Fix: Don't try to update the roles list before becoming an operator, which could lead to a crash. Thanks Bluestrings for reporting.

2024-08-04 Version 2.2.2-beta.2
 * Feature: Allow choosing a different cursor for erase and alpha locked brushes. Thanks Hipofiz and Rylan for suggesting.
 * Server Fix: Properly sever connections on read, write and timeout errors.
 * Fix: Load annotations from ORA files saved by Drawpile 2.1 properly. Thanks RyanMolyneux for reporting.
 * Feature: Ignore inputs with invalid pressure during strokes. Thanks Lunalatte for reporting.
 * Server Fix: Handle sessions running out of space better, they should no longer end up in an unrecoverable state. The messages in chat are also now translatable, more informative and don't get spammed for every command. Thanks Bluestrings and Charmandrigo for reporting.
 * Feature: Lock canvas when the session is out of space, showing an appropriate message in the corner, rather than letting you continue drawing. The server needs to be updated for this to be available.
 * Server Fix: Make catchup not take pointlessly long when the session is out of space.
 * Feature: Add a message to the reset dialog that you need to be an operator to reset the session, since it's not too clear why the button is disabled otherwise.
 * Feature: Make fill source selection a set of buttons for merged image, merged without background and layer, using the dropdown only for the latter thereof. The checked button will be remembered. Thanks Blozzom, Bluestrings and Meru for suggesting.
 * Feature: Default redo to both Ctrl+Y and Ctrl+Shift+Z on Windows, Linux and the browser. Thanks Crow for suggesting.
 * Fix: Brighten up transparency checkerboard to be a bit easier on the eyes. Thanks Crow for suggesting.